# AIResumeSuggestions

./: CMakeLists.txt  README.md  main.cpp  my_info.json  scraper.py
